# sysmetricsDB

./: CMakeLists.txt  README.md  vcpkg.json
include/: Analytics.hpp  DataPoint.hpp  Database.hpp  HardwarePoller.hpp  MetricSeries.hpp
src/: Database.cpp  MetricSeries.cpp  WindowsPoller.cpp  main.cpp
